package Protos;

message InputInfo {
    required uint32 localId = 1;
}

