package Protos;

message SpikeSequenceNeuronC {
    required double dt = 1;
}

message SpikeSequenceNeuronState {
    required uint32 index = 1;
}

